tests/snapshots/file@operator@subtract.lox.snap
---
source: tests/common/mod.rs
description: "print 4 - 3; // expect: 1\nprint 1.2 - 1.2; // expect: 0\n"
input_file: test_files/operator/subtract.lox
---
OUT: 
1
0

===
ERR:
