tests/snapshots/file@return@after_if.lox.snap
---
source: tests/common/mod.rs
description: "fun f() {\n  if (true) return \"ok\";\n}\n\nprint f(); // expect: ok\n"
input_file: crafting_interpreters_test_files/return/after_if.lox
---
OUT: 
ok

===
ERR:
