tests/snapshots/file@return@after_while.lox.snap
---
source: tests/common/mod.rs
description: "fun f() {\n  while (true) return \"ok\";\n}\n\nprint f(); // expect: ok\n"
input_file: crafting_interpreters_test_files/return/after_while.lox
---
OUT: 
ok

===
ERR:
