tests/snapshots/file@variable@redeclare_global.lox.snap
---
source: tests/common/mod.rs
description: "var a = \"1\";\nvar a;\nprint a; // expect: nil\n"
input_file: test_files/variable/redeclare_global.lox
---
OUT: 
nil
RET: a

===
ERR:
